2003-05-02 Michael Opdenacker <michaelo@gnu.org>

	* po/zh_TW: New Traditional Chinese translation
	from OLS3 <ols3@www.tnc.edu.tw>\ 

2003-04-13	Hynek Hanke	<hanke@volny.cz>

	* lessons/cs.typ: use M instead of K for menus
	* po/cs.po: new messages translated
	* doc/gtypist.cs.texi: updated

2003-04-06  Felix Natter  <fnatter@gmx.net>

	* configur.bat: include the new modules
	* tools/typcombine: adapt to M:

2003-03-31  Felix Natter  <fnatter@gmx.net>

	* cursmenu.c (do_menu): parse UP=<LABEL> as the first thing in M:

2003-03-11  Michael Opdenacker <michaelo@gnu.org>

	* script.c: updated with patch from Martin Pitt <martin@piware.de>
	to ignore trailing spaces in lesson file lines.

2003-03-01  Felix Natter  <fnatter@gmx.net>

	* doc/gtypist.texi (Supplied lessons): update the section on kt*.typ

	* cursmenu.c (do_menu): handle PAGE UP/PAGE DOWN

2003-02-02  Felix Natter  <fnatter@gmx.net>

	* added/updated lessons: ttde.typ ktde.typ ktdk2.typ kten.typ
	ktfr2.typ ktnumber.typ ktdk.typ ktdvorak.typ ktfr.typ ktno.typ
	+ remove ktlecten.typ
	(from tipptrainer 0.4, kdeedu-3.1/ktouch)

	* lessons/gtypist.pm: generate M:

	* cursmenu.c (do_menu): run get_script_line

2003-01-13  Felix Natter  <fnatter@gmx.net>

	* split code into modules (script, curses-menu, error, main)
	+ hook up menu-code (do_menu, M: command)

2003-01-12  Felix Natter  <fnatter@gmx.net>

	* apply patch from Steven Elliott (elliott4@austin.rr.com):
	"I've attached a small patch that allows gtypist to display errors
	in reverse video instead of the reverse video '^' as it currently does"
	(option --show-errors)

2002-12-10  Michael Opdenacker <michaelo@gnu.org>

	* configure.in: removed intl/Makefile, po/Makefile and m4/Makefile
	from AC_OUTPUT because already added by gettextize (unavoidable).

2002-12-10  Michael Opdenacker <michaelo@gnu.org>

	* typefortune: several fixes from Stefan Troeger <stefan@troeger.st>:
	  improved 'fortune' detection and temporary file deletion.
